--- a/kubernetes/03_Pods_running_containers_in_Kubernetes/gradiva/ex01-simple-server-manual.yaml
+++ b/kubernetes/03_Pods_running_containers_in_Kubernetes/gradiva/ex01-simple-server-manual.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Pod
 metadata:
-  name: kubia-manual
+  name: simple-server-manual
 spec:
   containers:
-  - image: luksa/kubia
-    name: kubia
+  - image: leon11sj/simple_server
+    name: simple-server
     ports:
     - containerPort: 8080
       protocol: TCP
