--- a/docker/04_Storage_and_volumes/data/example.conf
+++ b/docker/04_Storage_and_volumes/data/example.conf
@@ -2,6 +2,7 @@ server {
     listen 80;
     server_name localhost;
     access_log /var/log/nginx/custom.host.access.log main;
+    error_log /var/log/nginx/custom.error.log;
     location / {
         root /usr/share/nginx/html;
         index index.html index.htm;
