--- a/docker/07_Docker_compose/02_composetest/composetest/Dockerfile.prod
+++ b/docker/07_Docker_compose/02_composetest/composetest/Dockerfile.prod
@@ -17,7 +17,7 @@ RUN apt-get update && \
     apt-get install -y --no-install-recommends gcc
 
 # install python dependencies
-COPY ./requirements.txt .
+COPY ./composetest/requirements.txt .
 RUN pip wheel --no-cache-dir --no-deps --wheel-dir /usr/src/app/wheels -r requirements.txt
 
 
