--- a/kubernetes/05_Services/gradiva/ex02-simple-server-svc.yaml
+++ b/kubernetes/05_Services/gradiva/ex02-simple-server-svc.yaml
@@ -1,10 +1,10 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubia-svc
+  name: simple-server-svc
 spec:
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: kubia
+    app: simple-server
