--- a/kubernetes/05_Services/gradiva/ex03-simple-server-svc-client-ip-session-affinity.yaml
+++ b/kubernetes/05_Services/gradiva/ex03-simple-server-svc-client-ip-session-affinity.yaml
@@ -1,11 +1,11 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubia-svc
+  name: simple-server-svc
 spec:
   sessionAffinity: ClientIP
   ports:
   - port: 80
     targetPort: 8080
   selector:
-    app: kubia
+    app: simple-server
