--- a/kubernetes/05_Services/gradiva/ex04-simple-server-svc-nodeport.yaml
+++ b/kubernetes/05_Services/gradiva/ex04-simple-server-svc-nodeport.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubia-loadbalancer
+  name: simple-server-nodeport
 spec:
-  type: LoadBalancer
+  type: NodePort
   ports:
   - port: 80
     targetPort: 8080
+    nodePort: 30123
   selector:
-    app: kubia
+    app: simple-server
