--- a/kubernetes/05_Services/gradiva/ex05-simple-server-svc-loadbalancer.yaml
+++ b/kubernetes/05_Services/gradiva/ex05-simple-server-svc-loadbalancer.yaml
@@ -1,12 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubia-nodeport
+  name: simple-server-loadbalancer
 spec:
-  type: NodePort
+  type: LoadBalancer
   ports:
   - port: 80
     targetPort: 8080
-    nodePort: 30123
   selector:
-    app: kubia
+    app: simple-server
+    
