--- a/kubernetes/06_Deployments/gradiva/ex01-service.yaml
+++ b/kubernetes/06_Deployments/gradiva/ex01-service.yaml
@@ -1,11 +1,12 @@
 apiVersion: v1
 kind: Service
 metadata:
-  name: kubia
+  name: simple-server
 spec:
-  type: LoadBalancer
+  type: NodePort
   selector:
-    app: kubia
+    app: simple-server
   ports:
   - port: 80
     targetPort: 8080
+    nodePort: 30123
