--- a/kubernetes/06_Deployments/gradiva/ex03-simple-server-deployment-v3.yaml
+++ b/kubernetes/06_Deployments/gradiva/ex03-simple-server-deployment-v3.yaml
@@ -1,19 +1,19 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubia
+  name: simple-server
 spec:
   replicas: 3
   template:
     metadata:
-      name: kubia
+      name: simple-server
       labels:
-        app: kubia
+        app: simple-server
     spec:
       containers:
-      - image: leon11sj/kubia:v3
+      - image: leon11sj/simple-server:v3
         name: nodejs
         imagePullPolicy: Always
   selector:
     matchLabels:
-      app: kubia
+      app: simple-server
