--- a/kubernetes/06_Deployments/gradiva/ex02-simple-server-deployment-v2.yaml
+++ b/kubernetes/06_Deployments/gradiva/ex02-simple-server-deployment-v2.yaml
@@ -1,18 +1,18 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubia
+  name: simple-server
 spec:
   replicas: 3
   template:
     metadata:
-      name: kubia
+      name: simple-server
       labels:
-        app: kubia
+        app: simple-server
     spec:
       containers:
-      - image: leon11sj/kubia:v2
+      - image: leon11sj/simple-server:v2
         name: nodejs
   selector:
     matchLabels:
-      app: kubia
+      app: simple-server
