--- a/kubernetes/06_Deployments/gradiva/ex03-simple-server-deployment-v3-with-readinesscheck.yaml
+++ b/kubernetes/06_Deployments/gradiva/ex03-simple-server-deployment-v3-with-readinesscheck.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubia
+  name: simple-server
 spec:
   strategy:
     type: RollingUpdate
@@ -9,12 +9,12 @@ spec:
   minReadySeconds: 15
   template:
     metadata:
-      name: kubia
+      name: simple-server
       labels:
-        app: kubia
+        app: simple-server
     spec:
       containers:
-      - image: leon11sj/kubia:v3
+      - image: leon11sj/simple-server:v3
         name: nodejs
         imagePullPolicy: Always
         readinessProbe:
@@ -24,6 +24,6 @@ spec:
             port: 8080
   selector:
     matchLabels:
-      app: kubia
+      app: simple-server
       
       
