--- a/kubernetes/10_Automatic_scaling/ex01-scaling-deployment.yaml
+++ b/kubernetes/10_Automatic_scaling/ex01-scaling-deployment.yaml
@@ -1,21 +1,21 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: kubia
+  name: simple-server
 spec:
   replicas: 3
   template:
     metadata:
-      name: kubia
+      name: simple-server
       labels:
-        app: kubia
+        app: simple-server
     spec:
       containers:
-      - image: leon11sj/kubia:v1
+      - image: leon11sj/simple-server:v1
         name: nodejs
         resources:
           requests:
             cpu: 100m
   selector:
     matchLabels:
-      app: kubia
+      app: simple-server
