--- a/06_Building_Images/examples/02_simpleweb/Dockerfile
+++ b/06_Building_Images/examples/02_simpleweb/Dockerfile
@@ -3,9 +3,9 @@ FROM node:18-alpine
 WORKDIR /usr/app
 
 # Install some depenendencies
-COPY ./package.json ./
+COPY ./package.json .
 RUN npm install
-COPY ./ ./
+COPY . .
 
 EXPOSE 8080
 
