--- a/08_Running_Multi_container_Apps_With_Docker_Compose/examples/01-counter-app/docker-compose.yml
+++ b/08_Running_Multi_container_Apps_With_Docker_Compose/examples/01-counter-app/docker-compose.yml
@@ -2,7 +2,7 @@ version: "3.8"
 services:
   web-fe:
     build: .
-    command: python app.py
+    command: ["python", "app.py"]
     ports:
       - "80:5000"
     networks:
@@ -16,6 +16,6 @@ services:
 
 networks:
   counter-net:
-
+  
 volumes:
   redis-data:
