--- a/14_Replication_controllers/gradiva/ex03-simple-server-replicaset.yaml
+++ b/14_Replication_controllers/gradiva/ex03-simple-server-replicaset.yaml
@@ -1,11 +1,12 @@
-apiVersion: v1
-kind: ReplicationController
+apiVersion: apps/v1
+kind: ReplicaSet
 metadata:
   name: simple-server
 spec:
   replicas: 3
   selector:
-    app: simple-server
+    matchLabels:
+      app: simple-server
   template:
     metadata:
       labels:
@@ -13,6 +14,4 @@ spec:
     spec:
       containers:
       - name: simple-server
-        image: leon11sj/simple_server
-        ports:
-        - containerPort: 8080
+        image: leon11sj/test-app
